# KOSMOS

./: .gitignore  LICENSE  README.md  file_structure.txt  pyproject.toml  requirements.txt
data/interim/: clef_taskC_test3_full_0.json  clef_taskC_test3_full_1.json  clef_taskC_test3_full_10.json  clef_taskC_test3_full_11.json  clef_taskC_test3_full_12.json  clef_taskC_test3_full_13.json  clef_taskC_test3_full_14.json  clef_taskC_test3_full_15.json  clef_taskC_test3_full_16.json  clef_taskC_test3_full_17.json  clef_taskC_test3_full_18.json  clef_taskC_test3_full_19.json  clef_taskC_test3_full_2.json  clef_taskC_test3_full_20.json  clef_taskC_test3_full_21.json  clef_taskC_test3_full_22.json  clef_taskC_test3_full_23.json  clef_taskC_test3_full_24.json  clef_taskC_test3_full_25.json  clef_taskC_test3_full_26.json  clef_taskC_test3_full_27.json  clef_taskC_test3_full_28.json  clef_taskC_test3_full_29.json  clef_taskC_test3_full_3.json  clef_taskC_test3_full_30.json  (+97 more)
notebooks/: ontology_test.py  patient_encounter.ttl  rdf_graph.py
scripts/: add_turn_indices.py  align_kg_to_umls.py  build_nodes_from_interim.py  build_relationship_candidates.py  build_umls_faiss_index.py  convert_citations.py  convert_eval_csv_to_json.py  convert_raw_json_to_doclens.py  eval_soap_llm.py  graph_view.html  make_eval_csv.py  merge_faiss_shards.py  print_fhir_resource_attributes.py  run_align_kg_to_umls_batch.py  run_export_doclens_batch.py  run_graph_view.py  run_soap_llm_eval.py
tests/: ontology_alignment_demo.py  ontology_lookup_term.py  test_sapbert_embedder.py  test_umls.py
(+432 files in other folders)
