[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-kg"
version = "0.1.0"
description = "Clinical encounter to ontology-grounded knowledge graph"
readme = "README.md"
requires-python = ">=3.10"

# Add real dependencies as you go
dependencies = [
    "mysql-connector-python",
]

[tool.setuptools.packages.find]
where = ["src"]
